--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
 <div id="wrapper" class="container-fluid">
   <div class="row">
     <div class="col-sm-3 col-md-2 hidden-xs sidebar" id="main-sidebar">
-      {{ partial 'shared/main-menu'}}
+      {{nav-list }}
     </div>
     {{outlet}}
   </div>
