--- a/app/styles/components/_filters.scss
+++ b/app/styles/components/_filters.scss
@@ -1,5 +1,5 @@
 #table-filter {
-  display: none;
+  display: block;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   margin-top: 20px;
