--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 @import 'bootstrap';
 @import 'pikaday';
+@import 'spinkit';
 
 $ember-power-select-line-height: 2.6;
 $ember-power-select-border-color: #ccc;
@@ -17,8 +18,7 @@ $ember-power-select-focus-border-color: lighten($brand-success, 20);
 $ember-power-select-focus-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 $ember-power-select-trigger-contiguous-border: 1px solid $ember-power-select-border-color !default;
 
-
-
+@import 'components/loading';
 @import 'components/sidebar';
 @import 'components/tables';
 @import 'components/labels';
